[package]
name = "act_rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An actor library"
repository = "https://github.com/coruscateor/act_rs"
homepage = "https://coruscateor.com/projects/act_rs"
keywords = ["actor", "actors", "async", "message", "messages"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.*", features = ["rt", "rt-multi-thread", "sync", "macros"], optional = true }
futures = "0.3.*"
#parking_lot = "0.12.*"
#crossbeam = "0.8.*"
crossbeam = { version = "0.8.*", optional = true }
async-trait = "0.1.*"
delegate = "0.*"

#dependencies.tokio]

[features]
std = []

