[package]
name = "act_rs"
version = "0.4.0-alpha"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Act.rs is a minimal actor framework."
repository = "https://github.com/coruscateor/act_rs"
homepage = "https://coruscateor.com/projects/act_rs"
keywords = ["actor", "actors", "async", "message", "pipeline"]
categories = ["asynchronous", "concurrency"]
authors = ["Paul Saunders"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Disabled

#tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "sync", "macros"], optional = true }
async-trait = { version = "0.1.88", optional = true }

[features]
std = []

#Disabled

#tokio = ["dep:tokio", "dep:async-trait"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

#Apparently feature labelling in documentation compilation is unstable:

#https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577/2

#https://doc.rust-lang.org/rustdoc/unstable-features.html

#https://docs.rs/about/metadata



#To compile the documentation use:

#cargo doc --all-features


